logs/leonardo-module-auth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/leonardo_module_auth-2015.0.1.egg-info'...
Listing './lib/python3.5/site-packages/leonardo_module_oauth'...
Listing './lib/python3.5/site-packages/leonardo_module_oauth/templates'...
Listing './lib/python3.5/site-packages/leonardo_module_oauth/templates/account'...
Listing './lib/python3.5/site-packages/leonardo_module_oauth/templates/widget'...
Listing './lib/python3.5/site-packages/leonardo_module_oauth/templates/widget/userlogin'...
Listing './lib/python3.5/site-packages/leonardo_module_oauth/templates/widget/userregistration'...
Listing './lib/python3.5/site-packages/leonardo_module_saml'...
Compiling './lib/python3.5/site-packages/leonardo_module_saml/settings.py'...
***   File "./lib/python3.5/site-packages/leonardo_module_saml/settings.py", line 34
    saml2.BINDING_HTTP_POST),
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
